manifests/metal-01/apps/networking/traefik/dashboard/ingress-route.yaml
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: dashboard
  namespace: networking
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`traefik.${SECRET_DOMAIN}`)
      kind: Rule
      priority: 10
      services:
        - name: api@internal
          kind: TraefikService
      middlewares:
        - name: rfc1918
  tls:
    secretName: ${SECRET_DOMAIN/./-}
